--- a/src/main/resources/templates/Menu.mustache
+++ b/src/main/resources/templates/Menu.mustache
@@ -1,11 +1,24 @@
 
+
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Getting Started: Serving Web Content</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-<div>{{name}}</div>
+<div> <form method="post">
+    <input type="text" name = "name" placeholder="Введите название"/>
+    <input type="text" name = "discription" placeholder="Введите описание"/>
+    <button type="submit">Enter</button>
+</form></div>
+<div> Меню </div>
+
+{{#message }}
+    <div>
+<b> {{id}} </b>
+    <span> {{name}} </span>
+<i>{{discription}}</i></div>
+{{/message }}
+
 </body>
 </html>
